# models/product.go
@@ -3,10 +3,11 @@ package models
 type Product struct {
 	Id            string  `json:"id,omitempty"`
 	CategoryId    string  `json:"category_id,omitempty"`
+	OrderId       string  `json:"order_id,omitempty"`
 	Favorite      bool    `json:"favorite"`
 	Name          string  `json:"name,omitempty"`
-	Price         int     `json:"price,omitempty"`
-	With_discount int     `json:"with_discount,omitempty"`
+	Price         float64     `json:"price,omitempty"`
+	With_discount float64     `json:"with_discount,omitempty"`
 	Rating        float64 `json:"rating,omitempty"`
 	Description   string  `json:"description,omitempty"`
 	Order_count   int     `json:"order_count,omitempty"`
@@ -18,10 +19,11 @@ type Product struct {
 
 type ProductCreate struct {
 	CategoryId    string  `json:"category_id"`
+	OrderId       string  `json:"order_id"`
 	Favorite      bool    `json:"favorite"`
 	Name          string  `json:"name"`
-	Price         int     `json:"price"`
-	With_discount int     `json:"with_discount"`
+	Price         float64     `json:"price"`
+	With_discount float64     `json:"with_discount"`
 	Rating        float64 `json:"rating"`
 	Description   string  `json:"description"`
 	Order_count   int     `json:"order_count"`
@@ -30,10 +32,11 @@ type ProductCreate struct {
 type ProductUpdate struct {
 	Id            string  `json:"id"`
 	CategoryId    string  `json:"category_id"`
+	OrderId       string  `json:"order_id"`
 	Favorite      bool    `json:"favorite"`
 	Name          string  `json:"name"`
-	Price         int     `json:"price"`
-	With_discount int     `json:"with_discount"`
+	Price         float64     `json:"price"`
+	With_discount float64     `json:"with_discount"`
 	Rating        float64 `json:"rating"`
 	Description   string  `json:"description"`
 	Order_count   int     `json:"order_count"`
@@ -44,6 +47,7 @@ type ProductPrimaryKey struct {
 }
 type ProductGetListRequest struct {
 	CategoryId string `json:"category_id"`
+	OrderId    string `json:"order_id"`
 	Favorite   *bool  `json:"favorite"`
 	Offset     int    `json:"offset"`
 	Limit      int    `json:"limit"`
